--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,19 +1,62 @@
 steps:
-- name: 'gcr.io/cloud-builders/docker'
-  args: [ 'build', '-t', 'gcr.io/$PROJECT_ID/sish:$SHORT_SHA', '.' ]
-  id: 'build-sish'
-- name: 'gcr.io/cloud-builders/docker'
-  entrypoint: 'bash'
-  args:
-  - '-c'
-  - |
-    if [[ "$BRANCH_NAME" == "master" ]]; then
-      docker tag gcr.io/$PROJECT_ID/sish:$SHORT_SHA gcr.io/$PROJECT_ID/sish
-      docker push gcr.io/$PROJECT_ID/sish
-    else
-      exit 0
-    fi
-  wait_for: ['build-sish']
-  id: 'latest'
+  - name: "gcr.io/cloud-builders/docker"
+    entrypoint: "bash"
+    args:
+      - "-c"
+      - |
+        docker pull gcr.io/$PROJECT_ID/sish:downloader-latest || true
+
+        docker build -t gcr.io/$PROJECT_ID/sish:downloader-$SHORT_SHA \
+          --cache-from gcr.io/$PROJECT_ID/sish:downloader-latest \
+          --target downloader .
+
+        docker tag gcr.io/$PROJECT_ID/sish:downloader-$SHORT_SHA gcr.io/$PROJECT_ID/sish:downloader-latest
+        docker push gcr.io/$PROJECT_ID/sish:downloader-latest
+  - name: "gcr.io/$PROJECT_ID/sish:downloader-$SHORT_SHA"
+    entrypoint: "sh"
+    args:
+      - "-c"
+      - |
+        echo "This would be a test"
+        #go test ./...
+  - name: "gcr.io/cloud-builders/docker"
+    entrypoint: "bash"
+    args:
+      - "-c"
+      - |
+        docker pull gcr.io/$PROJECT_ID/sish:downloader-latest || true
+        docker pull gcr.io/$PROJECT_ID/sish:builder-latest || true
+
+        docker build -t gcr.io/$PROJECT_ID/sish:builder-$SHORT_SHA \
+          --cache-from gcr.io/$PROJECT_ID/sish:downloader-latest \
+          --cache-from gcr.io/$PROJECT_ID/sish:builder-latest \
+          --target builder .
+
+        docker tag gcr.io/$PROJECT_ID/sish:builder-$SHORT_SHA gcr.io/$PROJECT_ID/sish:builder-latest
+        docker push gcr.io/$PROJECT_ID/sish:builder-latest
+  - name: "gcr.io/cloud-builders/docker"
+    entrypoint: "bash"
+    args:
+      - "-c"
+      - |
+        docker pull gcr.io/$PROJECT_ID/sish:downloader-latest || true
+        docker pull gcr.io/$PROJECT_ID/sish:builder-latest || true
+        docker pull gcr.io/$PROJECT_ID/sish:runner-latest || true
+
+        docker build -t gcr.io/$PROJECT_ID/sish:runner-$SHORT_SHA \
+          --cache-from gcr.io/$PROJECT_ID/sish:downloader-latest \
+          --cache-from gcr.io/$PROJECT_ID/sish:builder-latest \
+          --cache-from gcr.io/$PROJECT_ID/sish:runner-latest .
+
+        docker tag gcr.io/$PROJECT_ID/sish:runner-$SHORT_SHA gcr.io/$PROJECT_ID/sish:$SHORT_SHA
+        docker tag gcr.io/$PROJECT_ID/sish:runner-$SHORT_SHA gcr.io/$PROJECT_ID/sish:runner-latest
+        docker push gcr.io/$PROJECT_ID/sish:runner-latest
+
+        if [[ "$BRANCH_NAME" == "master" ]]; then
+          docker tag gcr.io/$PROJECT_ID/sish:$SHORT_SHA gcr.io/$PROJECT_ID/sish
+          docker push gcr.io/$PROJECT_ID/sish
+        else
+          exit 0
+        fi
 images:
-- 'gcr.io/$PROJECT_ID/sish:$SHORT_SHA'
+  - "gcr.io/$PROJECT_ID/sish:$SHORT_SHA"
