--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -4,15 +4,15 @@ steps:
     args:
       - "-c"
       - |
-        docker pull gcr.io/$PROJECT_ID/sish:builder-latest || true
+        docker pull gcr.io/$PROJECT_ID/sish:$BRANCH_NAME-builder-latest || true
+        docker pull gcr.io/$PROJECT_ID/sish:master-builder-latest || true
 
-        docker build -t gcr.io/$PROJECT_ID/sish:builder-$SHORT_SHA \
-          --cache-from gcr.io/$PROJECT_ID/sish:builder-latest \
+        docker build -t gcr.io/$PROJECT_ID/sish:$BRANCH_NAME-builder-$SHORT_SHA \
+          -t gcr.io/$PROJECT_ID/sish:$BRANCH_NAME-builder-latest \
+          --cache-from gcr.io/$PROJECT_ID/sish:$BRANCH_NAME-builder-latest \
+          --cache-from gcr.io/$PROJECT_ID/sish:master-builder-latest \
           --target builder .
-
-        docker tag gcr.io/$PROJECT_ID/sish:builder-$SHORT_SHA gcr.io/$PROJECT_ID/sish:builder-latest
-        docker push gcr.io/$PROJECT_ID/sish:builder-latest
-  - name: "gcr.io/$PROJECT_ID/sish:builder-$SHORT_SHA"
+  - name: "gcr.io/$PROJECT_ID/sish:$BRANCH_NAME-builder-$SHORT_SHA"
     entrypoint: "sh"
     args:
       - "-c"
@@ -23,10 +23,12 @@ steps:
     args:
       - "-c"
       - |
-        docker pull gcr.io/$PROJECT_ID/sish:builder-latest || true
+        docker pull gcr.io/$PROJECT_ID/sish:$BRANCH_NAME-builder-latest || true
+        docker pull gcr.io/$PROJECT_ID/sish:master-builder-latest || true
 
         docker build -t gcr.io/$PROJECT_ID/sish:$SHORT_SHA \
-          --cache-from gcr.io/$PROJECT_ID/sish:builder-latest .
+          --cache-from gcr.io/$PROJECT_ID/sish:$BRANCH_NAME-builder-latest \
+          --cache-from gcr.io/$PROJECT_ID/sish:master-builder-latest .
 
         if [[ "$BRANCH_NAME" == "master" ]]; then
           docker tag gcr.io/$PROJECT_ID/sish:$SHORT_SHA gcr.io/$PROJECT_ID/sish
@@ -36,3 +38,4 @@ steps:
         fi
 images:
   - "gcr.io/$PROJECT_ID/sish:$SHORT_SHA"
+  - "gcr.io/$PROJECT_ID/sish:$BRANCH_NAME-builder-latest"
