Updated docker buildsteps to include multiarch

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
-keys/
-pubkeys/
-ssl/
+keys/*
+!keys/.gitkeep
+pubkeys/*
+!pubkeys/.gitkeep
+ssl/*
+!ssl/.gitkeep
 sish
 deploy/*
 !deploy/docker-compose.yml
