--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,6 +11,8 @@ jobs:
         uses: actions/checkout@v1
       - name: Set up Go
         uses: actions/setup-go@v1
+        with:
+          go-version: 1.13
       - name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v1
         with:
