--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -7,15 +7,10 @@ builds:
   - CGO_ENABLED=0
   goos:
     - linux
-    - darwin
-    - windows
   goarch:
-    - 386
     - amd64
     - arm
     - arm64
-checksum:
-  name_template: '{{ .ProjectName }}_checksums.txt'
 changelog:
   sort: asc
   filters:
@@ -25,13 +20,7 @@ changelog:
     - Merge pull request
     - Merge branch
 archives:
-  - name_template: '{{ .ProjectName }}_{{ .Os }}_{{ .Arch }}{{ if .Arm }}v{{ .Arm }}{{ end }}'
-    replacements:
-      darwin: Darwin
-      linux: Linux
-      windows: Windows
-      386: i386
-      amd64: x86_64
+  - name_template: '{{ .ProjectName }}-{{ .Version }}.{{ .Os }}-{{ .Arch }}{{ if .Arm }}v{{ .Arm }}{{ end }}'
     format_overrides:
     - goos: windows
       format: zip
