Fixed starting background channels

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -7,6 +7,9 @@ builds:
   - CGO_ENABLED=0
   goos:
     - linux
+    - win
+    - darwin
+    - windows
   goarch:
     - amd64
     - arm
@@ -21,6 +24,12 @@ changelog:
     - Merge branch
 archives:
   - name_template: '{{ .ProjectName }}-{{ .Version }}.{{ .Os }}-{{ .Arch }}{{ if .Arm }}v{{ .Arm }}{{ end }}'
+    wrap_in_directory: true
     format_overrides:
-    - goos: windows
-      format: zip
+      - goos: windows
+        format: zip
+    files:
+      - LICENSE*
+      - README*
+      - keys/
+      - pubkeys/
