--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -35,6 +35,8 @@ jobs:
         docker buildx build \
           --push \
           --platform linux/arm/v7,linux/arm64,linux/amd64 \
+          --cache-to type=registry,ref=${GITHUB_REPOSITORY}-cache,mode=max \
+          --cache-from ${GITHUB_REPOSITORY}-cache \
           --build-arg VERSION=${REF} \
           --build-arg COMMIT=${GITHUB_SHA} \
           --build-arg DATE=${DATE} \
