--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -1,24 +1,13 @@
 version: '3.7'
 
 services:
-  busybox:
-    image: busybox
-    volumes: 
-      - ./letsencrypt:/etc/letsencrypt
-    command: /bin/sh -c "echo '$DOMAIN *.$DOMAIN autorestart-containers=sish' > /etc/letsencrypt/domains.conf"
   letsencrypt:
-    image: adferrand/letsencrypt-dns:latest
+    image: adferrand/dnsrobocert:latest
     container_name: letsencrypt-dns
-    depends_on: 
-      - busybox
-    environment:
-      - VERSION=latest
-      - LETSENCRYPT_USER_MAIL
-      - LEXICON_PROVIDER
-      - LEXICON_PROVIDER_OPTIONS
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - ./letsencrypt:/etc/letsencrypt
+      - ./le-config.yml:/etc/dnsrobocert/config.yml
     restart: always
   sish:
     image: antoniomika/sish:latest
@@ -30,15 +19,15 @@ services:
       - ./pubkeys:/pubkeys
       - ./keys:/keys
     command: |
-      -sish.addr=:22
-      -sish.https=:443
-      -sish.http=:80
-      -sish.httpsenabled=true
-      -sish.httpspems=/etc/letsencrypt/live/$DOMAIN
-      -sish.keysdir=/pubkeys
-      -sish.pkloc=/keys/ssh_key
-      -sish.bindrandom=false
-      -sish.domain=$DOMAIN
-      -sish.forcerandomsubdomain=false
+      --ssh-address=:22
+      --http-address=:80
+      --https-address=:443
+      --enable-https=true
+      --certificate-directory=/etc/letsencrypt/live/ssi.sh
+      --authentication-keys-directory=/pubkeys
+      --private-key-location=/keys/ssh_key
+      --bind-random-ports=false
+      --bind-random-subdomains=false
+      --domain=ssi.sh
     network_mode: host
     restart: always
