--- a/config.example.yml
+++ b/config.example.yml
@@ -1,5 +1,8 @@
+admin-console: false
 admin-console-token: S3Cr3tP4$$W0rD
 append-user-to-subdomain: false
+append-user-to-subdomain-separator: '-'
+authentication: false
 authentication-keys-directory: deploy/pubkeys/
 authentication-password: S3Cr3tP4$$W0rD
 banned-countries: ""
@@ -7,38 +10,35 @@ banned-ips: ""
 banned-subdomains: localhost
 bind-random-ports: true
 bind-random-subdomains: true
-certificate-directory: deploy/ssl/
+bind-random-subdomains-length: 3
 cleanup-unbound: true
 cleanup-unbound-timeout: 5s
 config: config.yml
 connection-idle-timeout: 5s
 debug: false
 domain: ssi.sh
-enable-admin-console: false
-enable-authentication: false
-enable-geodb: false
-enable-https: false
-enable-log-to-client: false
-enable-proxy-protocol: false
-enable-redirect-root: true
-enable-service-console: false
-enable-tcp-aliases: false
+geodb: false
 http-address: localhost:80
 http-port-override: 0
+https: false
 https-address: localhost:443
+https-certificate-directory: deploy/ssl/
 https-port-override: 0
-max-subdomain-length: 3
+log-to-client: false
 ping-client: true
 ping-client-interval: 5s
 port-bind-range: 0,1024-65535
 private-key-location: deploy/keys/ssh_key
 private-key-passphrase: S3Cr3tP4$$phrAsE
+proxy-protocol: false
 proxy-protocol-version: "1"
+redirect-root: true
 redirect-root-location: https://github.com/antoniomika/sish
+service-console: false
 service-console-token: ""
 ssh-address: localhost:2222
+tcp-aliases: false
 time-format: 2006/01/02 - 15:04:05
-user-subdomain-separator: ""
 verify-origin: true
 verify-ssl: true
 whitelisted-countries: ""
