Added automatic certificate creation and worked on some documentation

--- a/config.example.yml
+++ b/config.example.yml
@@ -24,11 +24,19 @@ http-port-override: 0
 https: false
 https-address: localhost:443
 https-certificate-directory: deploy/ssl/
+https-ondemand-certificate: false
 https-port-override: 0
 idle-connection: true
 idle-connection-timeout: 5s
 localhost-as-all: true
 log-to-client: false
+log-to-file: false
+log-to-file-compress: false
+log-to-file-max-age: 28
+log-to-file-max-backups: 3
+log-to-file-max-size: 500
+log-to-file-path: /tmp/sish.log
+log-to-stdout: true
 ping-client: true
 ping-client-interval: 5s
 ping-client-timeout: 5s
