--- a/config.example.yml
+++ b/config.example.yml
@@ -25,6 +25,8 @@ https: false
 https-address: localhost:443
 https-certificate-directory: deploy/ssl/
 https-ondemand-certificate: false
+https-ondemand-certificate-accept-terms: false
+https-ondemand-certificate-email: ""
 https-port-override: 0
 idle-connection: true
 idle-connection-timeout: 5s
