Added ssl and keys directory to goreleaser bundle

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -33,5 +33,7 @@ archives:
     files:
       - LICENSE*
       - README*
+      - deploy/ssl/
+      - deploy/keys/
       - deploy/pubkeys/
       - templates/**/*
