Updated goreleaser to be generic per repo

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -4,12 +4,11 @@ before:
     - go generate ./...
 builds:
 - ldflags:
-    - -s -w -X github.com/antoniomika/sish/cmd.Version={{ .Version }} -X github.com/antoniomika/sish/cmd.Commit={{ .Commit }} -X github.com/antoniomika/sish/cmd.Date={{ .Date }}
+    - '{{ $gitURL := replace .GitURL ".git" "" }}{{ $sshRepo := replace $gitURL "git@github.com:" "" }}{{ $httpRepo := replace $sshRepo "https://github.com/" "" }}-s -w -X github.com/{{ $httpRepo }}/cmd.Version={{ .Version }} -X github.com/{{ $httpRepo }}/cmd.Commit={{ .Commit }} -X github.com/{{ $httpRepo }}/cmd.Date={{ .Date }}'
   env:
     - CGO_ENABLED=0
   goos:
     - linux
-    - win
     - darwin
     - windows
   goarch:
