Test new build method

--- a/Dockerfile.buildkit
+++ b/Dockerfile.buildkit
@@ -2,15 +2,18 @@ FROM --platform=$BUILDPLATFORM golang:1.14-alpine as builder
 LABEL maintainer="Antonio Mika <me@antoniomika.me>"
 
 ENV GOCACHE /gocache
+ENV GOTMPDIR /gotmpdir
 ENV CGO_ENABLED 0
 
 WORKDIR /app
 
+RUN mkdir -p /gocache /gotmpdir
 RUN apk add --no-cache git ca-certificates
 
 COPY go.mod .
 COPY go.sum .
 
+RUN go mod tidy
 RUN go mod download
 
 COPY . .
@@ -24,6 +27,8 @@ ARG TARGETARCH
 
 ENV GOOS=${TARGETOS} GOARCH=${TARGETARCH}
 
+RUN go generate ./...
+RUN go test ./...
 RUN go build -o /go/bin/sish -ldflags="-s -w -X github.com/antoniomika/sish/cmd.Version=${VERSION} -X github.com/antoniomika/sish/cmd.Commit=${COMMIT} -X github.com/antoniomika/sish/cmd.Date=${DATE}"
 
 FROM scratch as release
