--- a/Dockerfile.buildkit
+++ b/Dockerfile.buildkit
@@ -7,13 +7,12 @@ ENV CGO_ENABLED 0
 
 WORKDIR /app
 
-RUN mkdir -p /gocache /gotmpdir
+RUN mkdir -p /gocache /gotmpdir /emptydir
 RUN apk add --no-cache git ca-certificates
 
 COPY go.mod .
 COPY go.sum .
 
-RUN go mod tidy
 RUN go mod download
 
 COPY . .
@@ -36,9 +35,10 @@ LABEL maintainer="Antonio Mika <me@antoniomika.me>"
 
 WORKDIR /app
 
-COPY --from=builder /tmp /tmp
+COPY --from=builder /emptydir /tmp
 COPY --from=builder /etc/ssl/certs/ca-certificates.crt /etc/ssl/certs/
 COPY --from=builder /app/deploy/ /app/deploy/
+COPY --from=builder /app/README* /app/LICENSE* /app/
 COPY --from=builder /app/templates /app/templates
 COPY --from=builder /go/bin/sish /app/sish
 
