--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -43,6 +43,7 @@ jobs:
           --build-arg VERSION=${REF} \
           --build-arg COMMIT=${GITHUB_SHA} \
           --build-arg DATE=${DATE} \
+          --build-arg REPOSITORY=${GITHUB_REPOSITORY} \
           -t ${GITHUB_REPOSITORY}:${GITHUB_SHA} \
           -t ${GITHUB_REPOSITORY}:${REF} \
           -f Dockerfile.buildkit \
