--- a/Dockerfile.buildkit
+++ b/Dockerfile.buildkit
@@ -29,7 +29,7 @@ ENV GOOS=${TARGETOS} GOARCH=${TARGETARCH}
 
 RUN go generate ./...
 RUN go test ./...
-RUN go install -ldflags="-s -w -X github.com/${REPOSITORY}/cmd.Version=${VERSION} -X github.com/${REPOSITORY}/cmd.Commit=${COMMIT} -X github.com/${REPOSITORY}/cmd.Date=${DATE}"
+RUN go build -o /go/bin/sish -ldflags="-s -w -X github.com/${REPOSITORY}/cmd.Version=${VERSION} -X github.com/${REPOSITORY}/cmd.Commit=${COMMIT} -X github.com/${REPOSITORY}/cmd.Date=${DATE}"
 
 FROM scratch as release
 LABEL maintainer="Antonio Mika <me@antoniomika.me>"
