--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -38,6 +38,7 @@ jobs:
 
         docker buildx build \
           --push \
+          --target release \
           --platform linux/arm/v7,linux/arm64,linux/amd64 \
           --cache-to type=registry,ref=${GITHUB_REPOSITORY}-cache,mode=max \
           --cache-from ${GITHUB_REPOSITORY}-cache \
@@ -49,3 +50,13 @@ jobs:
           -t ${GITHUB_REPOSITORY}:${REF} \
           -f Dockerfile.buildkit \
           ${OTHER_TAGS} .
+
+        docker buildx build \
+          --push \
+          --target build-cache \
+          --build-arg VERSION=${REF} \
+          --build-arg COMMIT=${GITHUB_SHA} \
+          --build-arg DATE=${DATE} \
+          --build-arg REPOSITORY=${GITHUB_REPOSITORY} \
+          -t ${REPOSITORY}-build-cache:latest \
+          -f Dockerfile.buildkit .
