Set app name back

--- a/Dockerfile.buildkit
+++ b/Dockerfile.buildkit
@@ -19,7 +19,6 @@ ARG VERSION=dev
 ARG COMMIT=none
 ARG DATE=unknown
 ARG REPOSITORY=unknown
-ARG APP_NAME=sish
 
 RUN go generate ./...
 RUN go test ./...
@@ -37,7 +36,7 @@ ARG TARGETARCH
 
 ENV GOOS=${TARGETOS} GOARCH=${TARGETARCH}
 
-RUN go build -o /go/bin/${APP_NAME} -ldflags="-s -w -X github.com/${REPOSITORY}/cmd.Version=${VERSION} -X github.com/${REPOSITORY}/cmd.Commit=${COMMIT} -X github.com/${REPOSITORY}/cmd.Date=${DATE}"
+RUN go build -o /go/bin/sish -ldflags="-s -w -X github.com/${REPOSITORY}/cmd.Version=${VERSION} -X github.com/${REPOSITORY}/cmd.Commit=${COMMIT} -X github.com/${REPOSITORY}/cmd.Date=${DATE}"
 
 FROM scratch as release
 LABEL maintainer="Antonio Mika <me@antoniomika.me>"
@@ -51,4 +50,4 @@ COPY --from=builder /app/README* /app/LICENSE* /app/
 COPY --from=builder /app/templates /app/templates
 COPY --from=builder /go/bin/ /app/
 
-ENTRYPOINT ["/app/${APP_NAME}"]
+ENTRYPOINT ["/app/sish"]
